plugins {
	id 'java'
}

group = 'com.oracle.java'
version = '0.0.1-SNAPSHOT'

repositories {
	mavenCentral()
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(20)
    }
}

dependencies {
	testImplementation libs.junit.platform
}

tasks.withType(Test).configureEach {
	useJUnitPlatform()
	jvmArgs(['--enable-preview'])
}


tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.add('--enable-preview')
}


